08 January 2016: Wouter
	- Define _DEFAULT_SOURCE with _BSD_SOURCE for recent Linuxes.

05 January 2016: Wouter
	- #732: tcp-mss, outgoing-tcp-mss options for nsd.conf, patch
	  from Daisuke Higashi.

04 January 2016: Wouter
	- Updated acx_nlnetlabs to version 32.

11 December 2015: Wouter
	- Fix flto check for OSX clang.

10 December 2015: Wouter
	- 4.1.7 release
	- trunk has 4.1.8 in development.
	- take advantage of arc4random_uniform if available, patch from
	  Loganaden Velvindron.

3 December 2015: Wouter
	- tag for 4.1.7rc1 prerelease.

2 December 2015: Wouter
	- configure --enable-ratelimit-default-is-off with --enable-ratelimit
	  to set the default ratelimit to disabled but available in nsd.conf.
	- Document that ratelimit qps and slip are updated in reconfig.
	- version: "string" option to set chaos version query reply string.
	- Fix up defaults in manpage.

1 December 2015: Wouter
	- Explain rrl-slip better in documentation.

30 November 2015: Wouter
	- Fix TCP responses when REUSEPORT is in use by turning it off.
	- reuseport: no is the default, because the feature is not troublefree.
	- Document default in manpage for rrl-slip, ip4 and 6 prefixlength.

24 November 2015: Wouter
	- Fix zonec ttl mismatch printout to include more information.

18 November 2015: Wouter
	- RELNOTES more descriptive.
	- newer acx_nlnetlabs.m4.
	- spelling fixes from Igor Sobrado Delgado.

17 November 2015: Wouter
	- Fix #721: Fix wrong error code (FORMERR) returned for unknown
	  opcode.  NOTIMP expected.

16 November 2015: Wouter
	- Allocate less memory for TSIG digest.

6 November 2015: Wouter
	- Fixup for newer acx_nlnetlabs.m4, test for openssl version after
	  testing for libdl need.

5 November 2015: Wouter
	- newer acx_nlnetlabs.m4, does not needlessly link with -ldl.

30 October 2015: Wouter
	- Fix tpkg tests for portability.

29 October 2015: Wouter
	- patch from Doug Hogan for SSL_OP_NO_SSLvx options.
	- updated contrib/nsd.spec, from Bálint Szigeti.