@@ -10,6 +10,7 @@ BUG FIXES:
 	  Loganaden Velvindron.
 	- Fix flto check for OSX clang.
 	- Define _DEFAULT_SOURCE with _BSD_SOURCE for recent Linuxes.
+	- Fix #736: segfault during zone transfer.
 
 
 4.1.7
